# yamlscript

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  schema.yaml
.github/workflows/: python-package.yml  release.yml  tests.yml
examples/: greeting.yaml  hello.yaml
tests/: test_helloworld.py
yamlscript/: globals.py  main.py  models.py  source.py
